<resources>
    <string name="app_name">Car Rent</string>
    <string name="logo">logo</string>
    <string name="bg">bg</string>
    <string name="rent">Rent</string>
    <string name="bull_s">Bull\'s</string>
    <string name="splash3">Notion wide Car rental app</string>
    <string name="sign_up">sign up</string>
    <string name="new_user">New User?&#160;</string>
    <string name="go">GO</string>
    <string name="email">Email</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="hello_there_nwelcome_back">Hello there, \nWelcome back</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="welcome">Welcome,&#160;</string>
    <string name="sign_up_to_start_your_new_journey">sign up to start your new journey</string>
    <string name="already_have_an_account">Already have an account&#160;</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="user_name">User Name</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="drawe_open">open</string>
    <string name="drawer_close">close</string>
    <string name="main_activity">Main Activity</string>
</resources>